Wed Oct 12 07:52:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Strategies/DIOP_Transport.cpp:
        * tao/Strategies/SHMIOP_Transport.cpp:
          Remove not needed include of tao/Sync_Strategies.h

Wed Oct 12 03:59:27 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_union/discriminant_ci.cpp:

          In the generated body of the _default() method for a
          union, which sets the discriminator to its default
          value (the _default() method is not generated unless
          the disccriminator can have a valid default value),
          added a call to _reset(), which will free memory
          allocated for the existing active member. The former
          behavior, without the call to _reset(), was producing
          a memory leak in many cases when _default() is called
          on an instantiated union. Thanks to Georg Lohrer
          <news@tropezien.de> for reporting the problem.

        * TAO_IDLbe/be_visitor_union/union_cs.cpp:

          Minor change to generated code formatting.

Tue Oct 11 22:23:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * tao/IIOP_Connection_Handler.cpp:
          Fixed the performance problem.
          Simplifications sometimes become over-simplifications:-(

Tue Oct 11 08:33:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * tao/IIOP_Acceptor.cpp:
          Fix to counter problems with IPv4-compatible IPv6 addresses.

Tue Oct 11 01:24:45 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

        From James Megquier <jmegq at radiance dot com>
        * orbsvcs/orbsvcs/AV/AV_Core.h:
        * orbsvcs/orbsvcs/Notify/Properties.h:
        * orbsvcs/orbsvcs/Notify/RT_Properties.h:
        * orbsvcs/tests/Notify/lib/LookupManager.h:

          Declare exported (i.e. default visibility) singleton templates
          prior to typedefs that reference  them.  Prevents g++ 4.0 from
          silently making their visibility hidden.  [Bug 2260]
